--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -204,9 +204,7 @@ jobs:
             echo "GRAFANA_URL=$GRAFANA_URL" >> $GITHUB_ENV
           fi
 
-          if [ ! -z "$AMPLIFY_APP_URL" ]; then
-            echo "AMPLIFY_APP_URL=$AMPLIFY_APP_URL" >> $GITHUB_ENV
-          fi
+          # Note: La référence à Amplify a été supprimée car nous utilisons maintenant des conteneurs Docker
 
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si l'application échoue
@@ -405,7 +403,7 @@ jobs:
             if [ ! -z "$MONITORING_EC2_PUBLIC_IP" ]; then echo "  - TF_MONITORING_EC2_PUBLIC_IP" >> $GITHUB_STEP_SUMMARY; fi
             if [ ! -z "$RDS_ENDPOINT" ]; then echo "  - TF_RDS_ENDPOINT" >> $GITHUB_STEP_SUMMARY; fi
             if [ ! -z "$GRAFANA_URL" ]; then echo "  - TF_GRAFANA_URL" >> $GITHUB_STEP_SUMMARY; fi
-            if [ ! -z "$AMPLIFY_APP_URL" ]; then echo "  - TF_AMPLIFY_APP_URL" >> $GITHUB_STEP_SUMMARY; fi
+            # Note: La référence à Amplify a été supprimée car nous utilisons maintenant des conteneurs Docker
           fi
           echo "* **Branche:** main" >> $GITHUB_STEP_SUMMARY
           echo "* **Région AWS:** ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
