Refactorisation : Mise à jour des références à React Native et amélioration du script de nettoyage des conteneurs

--- a/infrastructure/modules/ec2-monitoring/scripts/docker-compose.yml
+++ b/infrastructure/modules/ec2-monitoring/scripts/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     mem_limit: 512m
     cpu_shares: 512
 
-  # Exportateur CloudWatch pour surveiller les services AWS (S3, RDS, Amplify)
+  # Exportateur CloudWatch pour surveiller les services AWS (S3, RDS, EC2)
   cloudwatch-exporter:
     image: prom/cloudwatch-exporter:latest
     container_name: cloudwatch-exporter
