--- a/infrastructure/modules/ec2-monitoring/scripts/docker-compose.yml
+++ b/infrastructure/modules/ec2-monitoring/scripts/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     volumes:
       - /opt/monitoring/grafana-data:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${grafana_admin_password}
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
