--- a/.github/workflows/3-docker-build-deploy.yml
+++ b/.github/workflows/3-docker-build-deploy.yml
@@ -60,7 +60,7 @@ jobs:
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         uses: docker/build-push-action@v4
         with:
-          context: ./infrastructure/modules/ec2-monitoring/docker/grafana
+          context: ./scripts/docker/grafana
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
@@ -73,7 +73,7 @@ jobs:
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         uses: docker/build-push-action@v4
         with:
-          context: ./infrastructure/modules/ec2-monitoring/docker/prometheus
+          context: ./scripts/docker/prometheus
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
@@ -86,7 +86,7 @@ jobs:
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         uses: docker/build-push-action@v4
         with:
-          context: ./infrastructure/modules/ec2-monitoring/docker/sonarqube
+          context: ./scripts/docker/sonarqube
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }}
@@ -196,8 +196,8 @@ jobs:
           GITHUB_CLIENT_SECRET: ${{ secrets.GITHUB_CLIENT_SECRET || 'dummy-secret' }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         run: |
-          chmod +x ./scripts/docker-manager.sh
-          ./scripts/docker-manager.sh deploy monitoring
+          chmod +x ./scripts/docker/docker-manager.sh
+          ./scripts/docker/docker-manager.sh deploy monitoring
 
       - name: Deploy app containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'mobile' }}
@@ -208,8 +208,8 @@ jobs:
           TF_EC2_PUBLIC_IP: ${{ secrets.TF_EC2_PUBLIC_IP }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         run: |
-          chmod +x ./scripts/docker-manager.sh
-          ./scripts/docker-manager.sh deploy mobile
+          chmod +x ./scripts/docker/docker-manager.sh
+          ./scripts/docker/docker-manager.sh deploy mobile
 
       - name: Summary
         run: |
