--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -80,6 +80,55 @@ jobs:
           EOF
 
           # Définir les variables AWS dans Terraform Cloud via l'API
+          # 1. Définir AWS_ACCESS_KEY_ID comme variable d'environnement
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "AWS_ACCESS_KEY_ID",
+                  "value": "${{ secrets.AWS_ACCESS_KEY_ID }}",
+                  "category": "env",
+                  "sensitive": true
+                }
+              }
+            }'
+
+          # 2. Définir AWS_SECRET_ACCESS_KEY comme variable d'environnement
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "AWS_SECRET_ACCESS_KEY",
+                  "value": "${{ secrets.AWS_SECRET_ACCESS_KEY }}",
+                  "category": "env",
+                  "sensitive": true
+                }
+              }
+            }'
+
+          # 3. Définir AWS_DEFAULT_REGION comme variable d'environnement
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "AWS_DEFAULT_REGION",
+                  "value": "${{ env.AWS_REGION }}",
+                  "category": "env",
+                  "sensitive": false
+                }
+              }
+            }'
+
+          # 4. Définir aws_access_key comme variable Terraform
           curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
             -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
             -H "Content-Type: application/vnd.api+json" \
@@ -95,6 +144,7 @@ jobs:
               }
             }'
 
+          # 5. Définir aws_secret_key comme variable Terraform
           curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
             -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
             -H "Content-Type: application/vnd.api+json" \
