--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -69,6 +69,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # Étape 3.5: Configuration des identifiants Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       # Étape 4: Configuration des variables Terraform Cloud
       - name: Configure Terraform Cloud Variables
         run: |
@@ -160,6 +167,54 @@ jobs:
               }
             }'
 
+          # 6. Définir dockerhub_username comme variable Terraform
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "dockerhub_username",
+                  "value": "${{ secrets.DOCKERHUB_USERNAME }}",
+                  "category": "terraform",
+                  "sensitive": true
+                }
+              }
+            }'
+
+          # 7. Définir dockerhub_token comme variable Terraform
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "dockerhub_token",
+                  "value": "${{ secrets.DOCKERHUB_TOKEN }}",
+                  "category": "terraform",
+                  "sensitive": true
+                }
+              }
+            }'
+
+          # 8. Définir dockerhub_repo comme variable Terraform
+          curl -s -X POST https://app.terraform.io/api/v2/workspaces/ws-${{ secrets.TF_WORKSPACE_ID }}/vars \
+            -H "Authorization: Bearer ${{ secrets.TF_API_TOKEN }}" \
+            -H "Content-Type: application/vnd.api+json" \
+            -d '{
+              "data": {
+                "type": "vars",
+                "attributes": {
+                  "key": "dockerhub_repo",
+                  "value": "${{ secrets.DOCKERHUB_REPO }}",
+                  "category": "terraform",
+                  "sensitive": true
+                }
+              }
+            }'
+
       # Étape 5: Initialisation de Terraform
       - name: Terraform Init
         id: init
@@ -205,6 +260,9 @@ jobs:
             -var="environment=${{ github.event.inputs.environment }}" \
             -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
             -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}" \
             -no-color \
             -out=tfplan
           echo "::endgroup::"
@@ -348,7 +406,10 @@ jobs:
             -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
             -var="environment=${{ github.event.inputs.environment }}" \
             -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
-            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}"
+            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}"
           echo "::endgroup::"
         continue-on-error: true  # Continuer même si la destruction échoue pour pouvoir nettoyer les ressources persistantes
 
